tests/checker/bad/bad_fields2.scilla
scilla_version 0

contract Empty
()

field bad_bar : Map Int64 (String -> Int32) = Emp Int64 (String -> Int32)

transition dummy()

end
